--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ line.link {
           <fieldset>
           <label>Example projects from GitHub:</label>
           <select id="project">
-            <option value="data/uptime.json">fzaninotto / uptime</option>
+            <option value="data/strategyzer.json">strategyzer</option>
             <option value="data/faker.json">fzaninotto / faker</option>
             <option value="data/jquery.json">jquery / jquery</option>
             <option value="data/twig.json">fabpot / twig</option>
