--- a/index.html
+++ b/index.html
@@ -62,25 +62,6 @@ line.link {
           </fieldset>
         </form>
         <div id="visualization"></div>
-        <form id="jsonConverter">
-        <fieldset>
-          <select name="origin">
-            <option value="cloc" selected>Origin: cloc</option>
-            <option value="ws">Origin: wc</option>
-          </select>
-          <textarea id="metricsData"></textarea>
-          <div class="pull-right">
-            <button type="submit" class="btn btn-primary btn-large">Convert</button>
-          </div>
-        </fieldset>
-        </form>
-        <h2>Sharing your CodeFlowers</h2>
-        <p>The best way to share your CodeFlowers is to use <a href="http://pages.github.com/">GitHub Pages</a>, just like this very page. So just fork the <a href="https://github.com/fzaninotto/CodeFlower"><code>fzaninotto/CodeFlower</code></a> repository, add your own JSON data under the <code>data</code> directory, update the options of the dropdown list in the <code>index.html</code> file accordingly, commit the code, and push to the <code>gh-pages</code> branch. GitHub will publish the result for you.</p>
-        <h2>Licence</h2>
-        <p>All this work is open-source, published by <a href="https://twitter.com/francoisz">François Zaninotto</a> under the MIT license. That means that nothing prevents you from growing as many CodeFlowers as you want!</p>
-        <a href="https://github.com/fzaninotto/CodeFlower"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
-      </div>
-    </div>
     <script type="text/javascript" src="javascripts/d3/d3.js"></script>
     <script type="text/javascript" src="javascripts/d3/d3.geom.js"></script>
     <script type="text/javascript" src="javascripts/d3/d3.layout.js"></script>
@@ -106,20 +87,20 @@ line.link {
       document.getElementById('project').addEventListener('change', function() {
         d3.json(this.value, createCodeFlower);
       });
-      document.getElementById('jsonInput').addEventListener('submit', function(e) {
-        e.preventDefault();
-        document.getElementById('visualization').scrollIntoView();
-        var json = JSON.parse(document.getElementById('jsonData').value);
-        currentCodeFlower.update(json);
-      });
-      document.getElementById('jsonConverter').addEventListener('submit', function(e) {
-        e.preventDefault();
-        var origin = this.children[0].children[0].value;
-        var data = this.children[0].children[1].value;
-        var json = convertToJSON(data, origin);
-        document.getElementById('visualization').scrollIntoView();
-        createCodeFlower(json);
-      });
+      // document.getElementById('jsonInput').addEventListener('submit', function(e) {
+      //   e.preventDefault();
+      //   document.getElementById('visualization').scrollIntoView();
+      //   var json = JSON.parse(document.getElementById('jsonData').value);
+      //   currentCodeFlower.update(json);
+      // });
+      // document.getElementById('jsonConverter').addEventListener('submit', function(e) {
+      //   e.preventDefault();
+      //   var origin = this.children[0].children[0].value;
+      //   var data = this.children[0].children[1].value;
+      //   var json = convertToJSON(data, origin);
+      //   document.getElementById('visualization').scrollIntoView();
+      //   createCodeFlower(json);
+      // });
     </script>
   </body>
 </html>
