--- a/index.html
+++ b/index.html
@@ -62,6 +62,16 @@ line.link {
           </fieldset>
         </form>
         <div id="visualization"></div>
+
+        <form id="jsonInput">
+        <fieldset>
+          <textarea id="jsonData"></textarea>
+          <div class="pull-right">
+            <button type="submit" class="btn btn-primary btn-large">Update</button>
+          </div>
+        </fieldset>
+        </form>
+       
     <script type="text/javascript" src="javascripts/d3/d3.js"></script>
     <script type="text/javascript" src="javascripts/d3/d3.geom.js"></script>
     <script type="text/javascript" src="javascripts/d3/d3.layout.js"></script>
