--- a/index.html
+++ b/index.html
@@ -41,28 +41,16 @@ line.link {
   <body>
     <div class="content">
       <div class="container">
-        <h1>CodeFlower Source code visualization</h1>
-        <p class="lead">This experiment visualizes source repositories using an interactive tree. Each disc represents a file, with a radius proportional to the number of lines of code (loc). All rendering is done client-side, in JavaScript. Try hovering on nodes to see the loc number, clicking on directory nodes to fold them, dragging nodes to rearrange the layout, and changing project to see different tree structures. Built with <a href="https://github.com/mbostock/d3">d3.js</a>. Inspired by <a href="https://code.google.com/p/codeswarm/">Code Swarm</a> and <a href="https://code.google.com/p/gource/">Gource</a>.</p>
+        <h1>Strategyzer App Visualization</h1>
         <form class="form-inline">
           <fieldset>
-          <label>Example projects from GitHub:</label>
           <select id="project">
-            <option value="data/strategyzer.json">strategyzer</option>
-            <option value="data/faker.json">fzaninotto / faker</option>
-            <option value="data/jquery.json">jquery / jquery</option>
-            <option value="data/twig.json">fabpot / twig</option>
-            <option value="data/lichess.json">ornicar / lila</option>
-            <option value="data/propel2.json">propelorm / Propel2</option>
-            <option value="data/doctrine2.json">doctrine / doctrine2</option>
-            <option value="data/wordpress.json">WordPress / WordPress</option>
-            <option value="data/rails.json">rails / rails</option>
-            <option value="data/symfony.json">symfony / symfony (WARNING: will make your computer scream)</option>
-            <option value="data/zf2.json">zendframework / zf2 (WARNING: will make your computer scream
+            <option value="data/strategyzer.json">Strategyzer</option>
+            <option value="data/bmg.json">Business Model Generation</option>
           </select>
           </fieldset>
         </form>
         <div id="visualization"></div>
-
         <form id="jsonInput">
         <fieldset>
           <textarea id="jsonData"></textarea>
@@ -97,20 +85,6 @@ line.link {
       document.getElementById('project').addEventListener('change', function() {
         d3.json(this.value, createCodeFlower);
       });
-      // document.getElementById('jsonInput').addEventListener('submit', function(e) {
-      //   e.preventDefault();
-      //   document.getElementById('visualization').scrollIntoView();
-      //   var json = JSON.parse(document.getElementById('jsonData').value);
-      //   currentCodeFlower.update(json);
-      // });
-      // document.getElementById('jsonConverter').addEventListener('submit', function(e) {
-      //   e.preventDefault();
-      //   var origin = this.children[0].children[0].value;
-      //   var data = this.children[0].children[1].value;
-      //   var json = convertToJSON(data, origin);
-      //   document.getElementById('visualization').scrollIntoView();
-      //   createCodeFlower(json);
-      // });
     </script>
   </body>
 </html>
